# offline-first-practice

./: package-lock.json  package.json  vite.config.ts
dev-dist/: sw.js
public/: manifest.json
src/: App.vue  main.ts  router.ts
src/components/: AuthWrapper.vue  ImageGrayscale.vue  PurchaseAccess.vue  PwaPrompt.vue
src/stores/: auth.ts
src/utils/: wasm-processor.ts
wasm-image-processor/: Cargo.toml
wasm-image-processor/src/: lib.rs
