[package]
name = "wasm-image-processor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
image = "0.24"
base64 = "0.21"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["ImageData", "CanvasRenderingContext2d", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false 